solve the problem of the title that exceeds the width when it's too long in mobile mobile

--- a/app/styles/pages/common/_common-sidebar-right.scss
+++ b/app/styles/pages/common/_common-sidebar-right.scss
@@ -881,12 +881,9 @@ MOBILE RESPONSIVE  SIDEBAR CONTENT
     }
   }
   .header-sidebar h2.header-more-options {
-    max-width: 241px !important;
-    justify-content: flex-start;
     align-self: center;
-    min-width: 100%;
-    margin-left: -30px;
     z-index: -1;
+    text-overflow: ellipsis;
   }
   #profile-main .media > div:nth-child(even) {
     float: right;
